--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                 <img src="png-transparent-computer-icons-facebook-inc-logo-facebook-blue-text-rectangle.png" alt="logo Intagram ">
                 <p>Mega Cine Foz</p>
             </div>
+            <small>Copyright © 2021 Cinemark</small>
             
         </div>
 
